--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="Bean & Bowl Logo">
+  <img src="BeanandBowlcirclelogonewsloganpingandgreencopyloweredmaintextmoveddots.png" alt="Bean & Bowl Logo">
   <h1>Website Under Construction</h1>
   <p>Contact us at <a href="mailto:hello@beanandbowl.com">hello@beanandbowl.com</a></p>
 </body>
