--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
   <title>Bean & Bowl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-  font-family: sans-serif;
-  text-align: center;
-  padding-top: 80px;
-  background-color: #6b8368; /* ← background color */
-  color: #ffc0e0;            /* ← text color */
-}
-a {
-  color: #ffc0e0;            /* ← link color (same as text) */
-  text-decoration: none;
-  font-weight: bold;
-}
+  body {
+    font-family: sans-serif;
+    text-align: center;
+    padding-top: 80px;
+  }
+
+  img {
+    max-width: 200px;
+    margin-bottom: 30px;
+  }
+
+  a {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+  }
+</style>
+
     img { max-width: 200px; margin-bottom: 30px; }
     a { color: #333; text-decoration: none; font-weight: bold; }
   </style>
