--- a/index.html
+++ b/index.html
@@ -5,24 +5,7 @@
   <title>Bean & Bowl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-  body {
-    font-family: sans-serif;
-    text-align: center;
-    padding-top: 80px;
-  }
-
-  img {
-    max-width: 200px;
-    margin-bottom: 30px;
-  }
-
-  a {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-  }
-</style>
-
+    body { font-family: sans-serif; text-align: center; padding-top: 80px; }
     img { max-width: 200px; margin-bottom: 30px; }
     a { color: #333; text-decoration: none; font-weight: bold; }
   </style>
